<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
app:civ_border_color="@color/colorAccent"
        android:src="@drawable/tree"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <LinearLayout
        android:id="@+id/mainLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


    <TextView
        android:id="@+id/tvTextEng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_choose_eng"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTextHindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_hindi"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTextEng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTextHindi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_eng"
            android:textSize="16sp"
            android:layout_marginEnd="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hin"
            android:textSize="16sp"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>